added Alert + made more detailed warnings